<resources>
    <string name="app_name">Habits</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="configuraciones">Settings</string>
    <string name="tema">Theme</string>
    <string name="tema_oscuro">Dark theme</string>
    <string name="idioma">Language</string>
    <string name="idioma_actual">Current language: English</string>
    <string name="fechas">Dates</string>
    <string name="fecha_inicio_de_los_registros">Start date of the records: %1$s</string>
    <string name="formato_actual_de_las_fechas">Current date format: yyyy-mm-dd</string>
    <string name="exportar_datos_a_csv">Export data to CSV</string>
    <string name="exportar_todos_los_datos_a_csv">Export all data to CSV</string>
    <string name="exportar_solo_los_habitos">Export only habits</string>
    <string name="exportar_solo_los_registros">Export only records</string>
    <string name="exportar_solo_las_etiquetas">Export only tags</string>
    <string name="copia_de_seguridad">Backup</string>
    <string name="exportar_copia_de_seguridad">Export backup (Importable again)</string>
    <string name="importar_copia_de_seguridad">Import backup</string>
    <string name="borrar_datos">Delete data</string>
    <string name="borrar_todos_los_datos">Delete all data</string>
    <string name="borrar_todos_los_habitos">Delete all habits</string>
    <string name="borrar_solo_los_registros">Delete only records</string>
    <string name="borrar_todas_las_etiquetas">Delete all tags</string>
    <string name="elige_tu_idioma">Choose your language</string>
    <string name="github">HabitTracker on GitHub</string>
    <string name="creador">Contact the creator</string>
    <string name="ir_al_gmail">Contact by Gmail</string>
    <string name="enviar_correo_con">Send email with…</string>
    <string name="no_app_correo">No email app found</string>
    <string name="licencias">Licenses</string>
    <string name="ver_licencias">View app licenses</string>
    <string name="titulo_borrar_todos_datos">Delete all data!</string>
    <string name="mensaje_borrar_todos_datos">You are about to delete ALL YOUR DATA…</string>
    <string name="titulo_borrar_todos_habitos">Delete all habits!</string>
    <string name="mensaje_borrar_todos_habitos">You are about to delete all your habits…</string>
    <string name="titulo_borrar_todos_registros">Delete all records!</string>
    <string name="mensaje_borrar_todos_registros">You are about to delete all records…</string>
    <string name="titulo_borrar_todas_etiquetas">Delete all tags!</string>
    <string name="mensaje_borrar_todas_etiquetas">You are about to delete all your tags…</string>
    <string name="error_fecha_mayor_hoy">The file date is greater than today, it is not valid</string>
    <string name="error_fecha_minima_soportada">Import error, minimum supported date is %1$s</string>
    <string name="archivo_csv_importado">CSV file imported successfully</string>
    <string name="error_importar_sin_habitos">Import error: no habits found</string>
    <string name="error_importar_sin_fechas">Import error: no dates found</string>
    <string name="error_leer_archivo">Error reading file</string>
    <string name="fichero_habitos_csv">Habits_%1$s.csv</string>
    <string name="habitos_data_csv">Habits_Data_%1$s.csv</string>
    <string name="habitos_data_package">Habits_Data_%1$s</string>
    <string name="copia_de_seguridad_csv">Backup_%1$s.csv</string>
    <string name="etiquetas_csv">Tags_%1$s.csv</string>
    <string name="datos_habit_tracker_zip">Habit_Tracker_Data_%1$s.zip</string>
    <string name="datos_habitos_zip">Habits_Data_%1$s.zip</string>
    <string name="cargando_tus_registros">Loading your records!</string>
    <string name="no_habr_vuelta_atras">There\'s no going back…</string>
    <string name="estoy_seguro">I\'m sure</string>
    <string name="advertencia">Warning</string>
    <string name="texto_advertencia_cambio_de_fechas">If you change the habits\' start date, all habits will be modified so the oldest date will be the one you set. If the new date is older, records will be added. If it\'s newer, records up to that date will be deleted.</string>
    <string name="cambiar_fecha">Change date</string>
    <string name="no_selecciono_archivo">No file was selected</string>
    <string name="anterior">Previous</string>
    <string name="pagina_num">Page %1$s</string>
    <string name="siguiente">Next</string>
    <string name="que_quieres_hacer">What to do?</string>
    <string name="mover">Move</string>
    <string name="archivar">Archive</string>
    <string name="editar">Edit</string>
    <string name="borrar">Delete</string>
    <string name="mover_habito">Move habit</string>
    <string name="modifica_la_posicion_de_tu_habito">Habit position</string>
    <string name="descartar">Discard</string>
    <string name="aplicar">Apply</string>
    <string name="confirmacion">Confirmation</string>
    <string name="estas_seguro_de_que_quieres_borrar_este_habito">Are you sure you want to delete this habit?</string>
    <string name="cancelar">Cancel</string>
    <string name="agregar_etiqueta">Add tag</string>
    <string name="informacion">Information</string>
    <string name="guardar_configuraciones">Save settings</string>
    <string name="notas">Notes</string>
    <string name="cantidad">Value</string>
    <string name="archivados">Archived</string>
    <string name="desarchivar">Unarchive</string>
    <string name="quieres_desarchivar_este_habito">Do you want to unarchive this habit?</string>
    <string name="desarchivar_todos">Unarchive all</string>
    <string name="quieres_desarchivar_todos_los_habito">Do you want to unarchive all habits?</string>
    <string name="desarchivar_habito">Unarchive habit</string>
    <string name="agregando_tu_habito">Adding your habit…!</string>
    <string name="agregar_habito">Add habit</string>
    <string name="elige_el_tipo_de_habito">Choose the type of habit</string>
    <string name="numerico">Numeric</string>
    <string name="booleano">Yes or No</string>
    <string name="editar_habito">Edit habit</string>
    <string name="error_palabra_fecha_reservada">The word fecha is reserved</string>
    <string name="error_habito_duplicado">You already have a habit with that name</string>
    <string name="exito_habito_editado">Habit edited successfully</string>
    <string name="exito_habito_anadido">Habit added successfully</string>
    <string name="error_campos_vacios">Fields cannot be empty</string>
    <string name="error_color_invalido">White is not a valid color</string>
    <string name="spinner_mas_de">More than</string>
    <string name="spinner_igual_a">Equal to</string>
    <string name="spinner_menos_de">Less than</string>
    <string name="escribe_el_nombre_de_tu_habito">Enter the name of your habit.</string>
    <string name="elige_el_color_del_habito">Choose the color of the habit</string>
    <string name="unidades_agregra_habito">Units (e.g., pages, km, hours…)</string>
    <string name="tu_objetivo_diario">Your daily goal</string>
    <string name="error">Error</string>
    <string name="objetivo_semanal">Weekly goal</string>
    <string name="objetivo_mensual">Monthly goal</string>
    <string name="objetivo_anual">Annual goal</string>
    <string name="calendario_de_objetivos">Goal calendar</string>
    <string name="racha_actual">Current streak</string>
    <string name="mejores_rachas">Best streaks</string>
    <string name="periodo_dia">Day</string>
    <string name="periodo_semana">Week</string>
    <string name="periodo_mes">Month</string>
    <string name="periodo_ano">Year</string>
    <string name="sin_datos">No data</string>
    <string name="unidades_checks">Checks</string>
    <string name="no_tienes_una_racha_activa">You don\'t have an active streak</string>
    <string name="desde_hasta_ayer">From %1$s until yesterday</string>
    <string name="desde_hasta_hoy">From %1$s until today</string>
    <string name="desde_hasta">From %1$s to %2$s</string>
    <string name="mini_habitos">Mini habits</string>
    <string name="selecciona_una_categoria">Select a category</string>
    <string name="borrar_mini_habito">Are you sure you want to delete this mini habit?</string>
    <string name="borrar_categoria_mini_habito">Are you sure you want to delete this category?</string>
    <string name="nombre_de_la_categoria">Category name</string>
    <string name="ponle_un_color_a_la_categoria">Category color</string>
    <string name="guardar">Save</string>
    <string name="error_nombre_vacio">Name cannot be empty</string>
    <string name="error_nombre_existente">This category name already exists</string>
    <string name="error_palabra_reservada">The word \'fecha\' is reserved</string>
    <string name="nombre_del_mini_habito">Name of the mini habit</string>
    <string name="mini_habito_creado_con_exito">Mini habit: %1$s created successfully</string>
    <string name="categoria_creada_exito">Category: %1$s created successfully</string>
    <string name="mini_habitos_info_titulo">Mini habits?</string>
    <string name="mini_habitos_info">Mini habits reset every day and are used to track tasks that aren\'t very important. You can group them into categories.</string>
    <string name="modifica_la_posicion_de_tu_categoria">Category position</string>
    <string name="modifica_la_posicion_de_tu_etiqueta">Tag position</string>
    <string name="categoria_nombre_existe">A category with that name already exists</string>
    <string name="categoria_nombre_vacio">The category name cannot be empty</string>
    <string name="seguro_que_quieres_borrar_la_categoria">Are you sure you want to delete the category?</string>
    <string name="mini_habito_nombre_existe">You already have a mini habit with that name</string>
    <string name="por_etiquetas">Filter by tags</string>
    <string name="etiqueta_nombre_existe">That tag name already exists</string>
    <string name="etiqueta_nombre_vacio">You cannot leave the name blank</string>
    <string name="etiqueta_nombre_reservado">The word date is reserved</string>
    <string name="etiqueta_color_blanco">White is not a color</string>
    <string name="etiqueta_creada_exito">Tag: %1$s created successfully</string>
    <string name="buen_intento_pero_no">Nice try but no!</string>
    <string name="modificando_etiqueta">Modifying tag…!</string>
    <string name="nombre_de_la_etiqueta">Tag name</string>
    <string name="seguro_que_quieres_borrar_la_etiqueta">Are you sure you want to delete the tag?</string>
    <string name="elige_el_color_de_la_etiqueta">Tag color</string>
    <string name="gestionar_etiquetas">Manage tags</string>
    <string name="todos">All</string>
    <string name="no_habits_no_tags">No tags without habits</string>
    <string name="ver_tutorial">View tutorial</string>
    <string name="paso_0_tutorial">Tap the three dots at the top and select add habit</string>
    <string name="paso_0_tutorial_titulo">Add habits</string>
    <string name="paso_1_tutorial">Hold down a habit to edit it</string>
    <string name="paso_1_tutorial_titulo">Edit a habit</string>
    <string name="paso_2_tutorial">Long press Yes or No habits to add notes.</string>
    <string name="paso_2_tutorial_titulo">Add notes</string>
    <string name="paso_3_tutorial_titulo">View statistics</string>
    <string name="paso_3_tutorial">Click on the habit\'s name to view its statistics.</string>
    <string name="objetivo_vacio">You can\'t leave the goal empty</string>
    <string name="objetivo_menor_o_igual_cero">The goal must be greater than 0</string>
    <string name="objetivo_maximo_semanal">For this type of habit, the maximum weekly goal is 7</string>
    <string name="objetivo_vacio_mensual">You can\'t leave the goals empty</string>
    <string name="objetivo_menor_o_igual_cero_mensual">Goals must be greater than 0</string>
</resources>