<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_configuraciones"
        android:title="@string/configuraciones"
        android:icon="@drawable/ic_configuraciones"
        />

    <item
        android:id="@+id/menu_agregar"
        android:title="@string/agregar_habito"
        android:icon="@drawable/ic_add"
        />

    <item
        android:id="@+id/menu_etiquetas"
        android:title="@string/por_etiquetas"
        android:icon="@drawable/ic_etiqueta"
        />

    <item
        android:id="@+id/mini_habitos"
        android:title="@string/mini_habitos"
        android:icon="@drawable/ic_minihabitos"
        />

    <item
        android:id="@+id/menu_tutorial"
        android:title="@string/ver_tutorial"
        android:icon="@drawable/ic_tutorial"
        />
</menu>