<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/w_dialog_desarchivar"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/p_dialog_archivar"
    android:background="@drawable/background_dialogo_opciones"

    >

    <TextView
        android:id="@+id/dialog_titulo_borrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desarchivar_habito"
        android:textSize="@dimen/t_titulo_dialog_archivar"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="@dimen/p_bot_titulo_archivar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/tittle_color"
        />

    <TextView
        android:id="@+id/dialog_mensaje_borrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quieres_desarchivar_este_habito"
        android:textSize="@dimen/t_subtitulo_dialog_archivar"
        android:gravity="center"
        android:paddingBottom="@dimen/p_bot_subtitulo_dialog_archivar"
        app:layout_constraintTop_toBottomOf="@id/dialog_titulo_borrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/tittle_color"
        />


    <Button
        android:id="@+id/button_cancelar_desarchivar"
        android:layout_width="@dimen/w_boton_dialog_archivar"
        android:layout_height="@dimen/h_boton_opciones"
        android:text="@string/cancelar"
        app:layout_constraintTop_toBottomOf="@id/dialog_mensaje_borrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_desarchivar"
        android:layout_marginEnd="@dimen/m_botones_dialog_archivar"
        android:textSize="@dimen/t_boton_dialog_archivar"
        android:textColor="@color/tittle_color"
        android:backgroundTint="@color/primary"
        />

    <Button
        android:id="@+id/button_desarchivar"
        android:layout_width="@dimen/w_boton_dialog_archivar"
        android:layout_height="@dimen/h_boton_opciones"
        android:text="@string/desarchivar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_mensaje_borrar"
        app:layout_constraintStart_toEndOf="@id/button_cancelar_desarchivar"
        android:layout_marginStart="@dimen/m_botones_dialog_archivar"
        android:textSize="@dimen/t_boton_dialog_archivar"
        android:textColor="@color/tittle_color"
        android:backgroundTint="@color/primary"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
