<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:background="@drawable/background_dialogo_opciones"
    android:padding="@dimen/p_dialog_comun"
    >

    <TextView
        android:id="@+id/dialog_titulo_mover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mover_habito"
        android:textSize="@dimen/t_mover_habito"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/tittle_color"
        />

    <TextView
        android:id="@+id/dialog_subitulo_mover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modifica_la_posicion_de_tu_habito"
        android:textSize="@dimen/t_subtitulo"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/dialog_titulo_mover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/tittle_color"
        android:paddingVertical="@dimen/p_v_subtitulo_mover_habito"
        />

    <TextView
        android:id="@+id/posicion_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_subitulo_mover"
        android:text="-1"
        android:textColor="@color/tittle_color"
        android:textSize="@dimen/t_posicion_al_mover"
        android:paddingVertical="@dimen/p_v_posicion"
        android:paddingBottom="@dimen/p_bot_posicion_mover_habito"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/m_top_texto_posicion"
        />

    <ImageView
        android:id="@+id/restar_posicion_area"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="@+id/posicion_picker"
        app:layout_constraintEnd_toStartOf="@+id/posicion_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sumar_posicion_area"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="@+id/posicion_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/posicion_picker"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/boton_menos_posicion"
        android:layout_width="@dimen/wh_botones_ajustar_posicion"
        android:layout_height="@dimen/wh_botones_ajustar_posicion"
        android:layout_marginEnd="@dimen/m_icono_mover"
        android:clickable="false"

        android:src="@drawable/ic_remove"
        app:layout_constraintBottom_toBottomOf="@+id/posicion_picker"
        app:layout_constraintEnd_toStartOf="@+id/posicion_picker"
        app:layout_constraintTop_toTopOf="@+id/posicion_picker"
        app:tint="@color/tittle_color" />

    <ImageView
        android:id="@+id/boton_sumar_posicion"
        android:layout_width="@dimen/wh_botones_ajustar_posicion"
        android:layout_height="@dimen/wh_botones_ajustar_posicion"
        android:layout_marginStart="@dimen/m_icono_mover"
        android:clickable="false"

        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="@+id/posicion_picker"
        app:layout_constraintStart_toEndOf="@+id/posicion_picker"
        app:layout_constraintTop_toTopOf="@+id/posicion_picker"

        app:tint="@color/tittle_color" />


    <Button
        android:id="@+id/button_cancelar_number_picker"
        android:layout_width="@dimen/w_boton_mover_posicion"
        android:layout_height="@dimen/h_boton_opciones"
        android:text="@string/descartar"
        app:layout_constraintTop_toBottomOf="@id/posicion_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_aplicar_number_picker"
        android:textSize="@dimen/t_boton_opciones"
        android:textColor="@color/tittle_color"
        android:backgroundTint="@color/primary"
        />

    <Button
        android:id="@+id/button_aplicar_number_picker"
        android:layout_width="@dimen/w_boton_mover_posicion"
        android:layout_height="@dimen/h_boton_opciones"
        android:text="@string/aplicar"
        app:layout_constraintTop_toBottomOf="@id/posicion_picker"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/t_boton_opciones"
        android:textColor="@color/tittle_color"
        android:backgroundTint="@color/primary"
        app:layout_constraintStart_toEndOf="@id/button_cancelar_number_picker"
        />





</androidx.constraintlayout.widget.ConstraintLayout>